syntax = "proto3";

import "google/protobuf/empty.proto";
import "niffler-currency.proto";

package guru.qa.grpc.userdata;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.userdata";
option java_outer_classname = "NifflerUserdataProto";

service NifflerUserdataService {
  rpc GetFriendsPageable(PageableRequest) returns (UserPageResponse);
  rpc SearchFriends(SearchFriendsRequest) returns (UserPageResponse);
  rpc SendFriendshipInvite(FriendshipInviteRequest) returns (FriendshipResponse);
  rpc AcceptFriendship(FriendshipRequest) returns (FriendshipResponse);
  rpc DeclineFriendship(FriendshipRequest) returns (FriendshipResponse);
  rpc RemoveFriendship(FriendshipRequest) returns (google.protobuf.Empty);
}

message PageableRequest {
  string username = 1;
  int32 page = 2;
  int32 size = 3;
}

message SearchFriendsRequest {
  string username = 1;
  string search_query = 2;
  int32 page = 3;
  int32 size = 4;
}

message FriendshipRequest {
  string username = 1;
  string friend_username = 2;
}

message FriendshipInviteRequest {
  string username = 1;
  string friend_username = 2;
}

message UserPageResponse {
  int32 total_elements = 1;
  int32 total_pages = 2;
  bool first = 3;
  bool last = 4;
  int32 size = 5;
  repeated UserResponse edges = 6;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string fullname = 3;
  guru.qa.grpc.niffler.CurrencyValues currency = 4;
  string photo_small = 5;
  FriendshipStatus friendship_status = 6;
}

message FriendshipResponse {
  UserResponse user = 1;
  FriendshipStatus status = 2;
}

enum FriendshipStatus {
  UNSPECIFIED = 0;
  PENDING = 1;
  ACCEPTED = 2;
  DECLINED = 3;
}